<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="60dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/await_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/await_text"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_logo"/>

    <TextView
        android:id="@+id/help_is_comming_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_is_comming_text"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/await_text"/>

    <TextView
        android:id="@+id/remaining_minutes_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5:35"
        android:textStyle="bold"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/remaining_minutes_text"/>

    <TextView
        android:id="@+id/remaining_minutes_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining_text"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cancel_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_purple_shape"
        android:text="@string/cancel_text"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>